message service done